Update content MINA

--- a/uat/about.html
+++ b/uat/about.html
@@ -38,11 +38,8 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 text-right">
-                <p class="num">Call: 1800 000 0000</p>
                 <ul class="fh5co-social">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -57,8 +54,7 @@
               <div class="col-xs-10 text-right menu-1">
                 <ul>
                   <li class="active"><a href="about.html">About Us</a></li>
-                  <li><a href="project.html">Projects</a></li>
-                  <li><a href="event.html">Events</a></li>
+                  <li><a href="project.html">Projects & Events</a></li>
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -75,7 +71,9 @@
               <div class="display-t">
                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
                   <h1>About Us</h1>
-                  <h2>MINA by<a href="#" target="_blank">&nbsp;MINA</a></h2>
+                  <h2>
+                    MINA's mission is to drive towards community well-being by exhibiting leadership and team work which lead to purposeful life.
+                  </h2>
                 </div>
               </div>
             </div>
@@ -85,9 +83,9 @@
       <div class="fh5co-counters" id="fh5co-counter">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="200" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="300" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="468" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="75" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
           </div>
         </div>
       </div>
@@ -98,35 +96,57 @@
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
               <h2>About Us</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>“Muslim Information Network of Australasia (MINA)” completed 10 years of successfully serving the society inhibiting Australian and Islamic values benefitting the people of this wonderful land.</p>
+              <h3>Our Vision</h3>
+              <p>To facilitate and empower Muslim community to utilise their full potential by contributing profusely to the Australian society. </p>
+              <h3>Our Mission</h3>
+              <p>To drive community well-being by exhibiting leadership and team work which lead to purposeful life.</p>
             </div>
           </div>
         </div>
         <div class="fh5co-explore">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-md-pull-1 animate-box"><img class="img-responsive" src="img/work_2.jpg" alt="work"></div>
+              <div class="col-md-8 animate-box">
+                <img class="img-responsive" src="img/work_3.jpg" alt="work">
+                
+              </div>
               <div class="col-md-4 animate-box">
                 <div class="mt">
                   <div>
-                    <h4>Real Project For Real Solutions</h4>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-                  </div>
-                  <div>
-                    <h4>Real Project For Real Solutions</h4>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-                  </div>
+                      <p>MINA is a not for profit organisation managed by committee of management overseeing the activities and ensure it leads to the vision and objectives outlined. This association comprises group of like-minded families of Islamic faith from diverse demographic background across Indian subcontinent. </p>
+                    </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="fh5co-explore">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6 animate-box">
+                    <div class="mt">
+                      <div>
+                        <p>MINA conducts weekly gatherings conducting various lectures acquiring knowledge and encouraging implementing in day to day life yielding social benefits. Executive committee gathers every month to review and refine the ongoing programs and to plan the future activities' in a better way. </p>
+                        <h4>Some Projects and Events</h4>
+                        <p>We engage in many projects and events to support the local communities such as Multi-faith Eid program, Eid ul Fitr, Eid ul Adha, Melbourne Immigration Transit Accommodation (MITA), NLP, Word to Word etc</p>
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-md-6 animate-box">
+                    <img class="img-responsive" src="img/work_4.jpg" alt="work">
+                  <img class="img-responsive" src="img/work_5.jpg" alt="work">
+                </div>
+                
+              </div>
+            </div>
+          </div>
       </div>
       <div class="fh5co-bg-section" id="fh5co-testimonial">
         <div class="container">
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-              <h2>Testimonials</h2>
+              <h2>Quotes and Our philosophy</h2>
             </div>
           </div>
           <div class="row">
@@ -135,28 +155,36 @@
                 <div class="owl-carousel owl-carousel-fullwidth">
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Noor Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
+                      <!-- <figure><img src="img/iqbal.png" alt="user"></figure><span> Iqbal Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                      <h3>
+                        <p>&ldquo; There is no beauty better than intellect. &rdquo;</p>
+                      </h3>
                     </div>
                   </div>
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Ansari Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
+                      <!-- <figure><img src="img/fois.png" alt="user"></figure><span> Fois Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                      <h3>
+                        <p>&ldquo; Do not belittle any good deed, even meeting your brother with a cheerful face &rdquo;</p>
+                      </h3>
                     </div>
                   </div>
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Moshin Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
+                      <!-- <figure><img src="img/mujib.png" alt="user"></figure><span> Mujab Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                      <h3>
+                        <p>&ldquo; Anyone who trains himself to be patient, Allah will give him the strength to be patient. &rdquo;</p>
+                      </h3>
                     </div>
                   </div>
+                  <div class="item">
+                      <div class="testimony-slide active text-center">
+                        <!-- <figure><img src="img/mujib.png" alt="user"></figure><span> Mujab Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                        <h3>
+                          <p>&ldquo; Kindness is a mark of faith. &rdquo;</p>
+                        </h3>
+                      </div>
+                    </div>
                 </div>
               </div>
             </div>
@@ -166,28 +194,27 @@
       <footer id="fh5co-footer" role="contentinfo">
         <div class="container">
           <div class="row row-pb-md">
-            <div class="col-md-3 fh5co-widget">
-              <h4>MINA</h4>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Learn &amp; Grow</h4>
-              <ul class="fh5co-footer-links">
-                <li><a href="#">Word to Word Classes</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Engage us</h4>
-              <ul class="fh5co-footer-links">
-                <li><a>BBQ</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Legal</h4>
-              <ul class="fh5co-footer-links">
-                <li><a>Legal Service</a></li>
-              </ul>
-            </div>
+              <div class="col-md-3 fh5co-widget">
+                <h4>MINA</h4>
+                <p>Our Vision is to facilitate and empower Muslim community to utilise their full potential by contributing profusely to the Australian society</p>
+              </div>
+              <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
+                <h4>Learn &amp; Grow</h4>
+                <ul class="fh5co-footer-links">
+                  <li>Quran Word to Word Classes</li>
+                  <li>NLP Course</li>
+                  <li>Weekly Dhars (Lessons)</li>
+                </ul>
+              </div>
+              <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
+                <h4>Engage us</h4>
+                <ul class="fh5co-footer-links">
+                  <li>Community BBQ</li>
+                  <li>EID Lunches</li>
+                  <li>Camping</li>
+                  <li>Family Outing</li>
+                </ul>
+              </div>
           </div>
           <div class="row copyright">
             <div class="col-md-12 text-center">
@@ -195,9 +222,7 @@
               <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
               <div>
                 <ul class="fh5co-social-icons">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
