--- a/uat/project.html
+++ b/uat/project.html
@@ -38,11 +38,8 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 text-right">
-                <p class="num">Call: 1800 000 0000</p>
                 <ul class="fh5co-social">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -57,8 +54,7 @@
               <div class="col-xs-10 text-right menu-1">
                 <ul>
                   <li><a href="about.html">About Us</a></li>
-                  <li class="active"><a href="project.html">Projects</a></li>
-                  <li><a href="event.html">Events</a></li>
+                  <li class="active"><a href="project.html">Projects & Events</a></li>
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -85,9 +81,9 @@
       <div class="fh5co-counters" id="fh5co-counter">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="200" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="300" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="468" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="75" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
           </div>
         </div>
       </div>
@@ -96,7 +92,7 @@
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
               <h2>Our Projects</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>“Muslim Information Network of Australasia (MINA)” completed 10 years of successfully serving the society inhibiting Australian and Islamic values benefitting the people of this wonderful land. </p>
             </div>
           </div>
         </div>
@@ -106,13 +102,10 @@
               <div class="col-md-8 col-md-push-5 animate-box"><img class="img-responsive" src="img/work_1.jpg" alt="work"></div>
               <div class="col-md-4 col-md-pull-8 animate-box">
                 <div class="mt">
-                  <h3>Project 1</h3>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                  <ul class="list-nav">
-                    <li>Far far away, behind the word<i class="icon-check2"></i></li>
-                    <li>There live the blind texts<i class="icon-check2"></i></li>
-                    <li>Separated they live in bookmarksgrove<i class="icon-check2"></i></li>
-                  </ul>
+                  <h3>Multi-faith Eid program</h3>
+                  <p>Successfully organised the Eid program with other faith since 2016, attendees ranging from social leaders such as Member of Parliament, Mayors, councillors, Victoria police officers to extended family of the MINA members like colleagues and friends from other faith. This program helped us in blending with larger society and breaking communal shackles.</p>
+                  <h3>Eid ul Fitr &amp; Eid ul Adha</h3>
+                  <p>Annual Islamic celebration marking the end of Ramadan, the Islamic holy month of fasting. We conduct this day long program at a pre booked community centre with around 50 families participating the festival. </p>
                 </div>
               </div>
             </div>
@@ -121,15 +114,21 @@
         <div class="fh5co-explore">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-md-pull-1 animate-box"><img class="img-responsive" src="img/work_2.jpg" alt="work"></div>
+              <div class="col-md-8 col-md-pull-1 animate-box">
+                <img class="img-responsive" src="img/work_6.jpg" alt="work">
+                <img class="img-responsive" src="img/work_7.jpg" alt="work">
+              </div>
               <div class="col-md-4 animate-box">
                 <div class="mt">
-                  <h3>Project 2</h3>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                  <h3>Melbourne Immigration Transit Accommodation (MITA) </h3>
+                  <p>
+                    Periodically conduct programs at MITA supporting and contributing to the betterment of people at this detention centre. The response was overwhelming that induce urge to contribute further to society especially on humanitarian aspects. 
+                  </p>
                   <ul class="list-nav">
-                    <li>Far far away, behind the word<i class="icon-check2"></i></li>
-                    <li>There live the blind texts<i class="icon-check2"></i></li>
-                    <li>Separated they live in bookmarksgrove<i class="icon-check2"></i></li>
+                    <li>To invite towards the noble way<i class="icon-check2"></i></li>
+                    <li>To promote spiritual and character building<i class="icon-check2"></i></li>
+                    <li>To offer Social Service<i class="icon-check2"></i></li>
+                    <li>To become and create role models<i class="icon-check2"></i></li>
                   </ul>
                 </div>
               </div>
@@ -140,91 +139,62 @@
           <div class="row animate-box">
             <div class="col-lg-4 col-md-4">
               <div>
-                <h4>Project 3 For Real Solutions</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                <h4>NLP Course</h4>
+                <p>A 2 day intense NLP course to help our community to use my mind ablities to fullest and become better human beings.</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-4">
               <div>
-                <h4>Project 4 For Real Solutions</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                <h4>Forest Camping</h4>
+                <p>Camping with families to spend some relax and enjoying time with nature and build strong friend other members and respect for the Australian Natural Life</p>
               </div>
             </div>
             <div class="col-lg-4 col-md-4">
               <div>
-                <h4>Project 5 For Real Solutions</h4>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                <h4>Word to Word Quran Classes</h4>
+                <p>To better understand the Quran, a word to word course is provide to the community to understand the Quran word by word.</p>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="fh5co-bg-section" id="fh5co-testimonial">
-        <div class="container">
-          <div class="row animate-box">
-            <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-              <h2>Testimonials</h2>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-              <div class="row animate-box">
-                <div class="owl-carousel owl-carousel-fullwidth">
-                  <div class="item">
-                    <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Noor Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Ansari Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
-                    </div>
-                  </div>
-                  <div class="item">
-                    <div class="testimony-slide active text-center">
-                      <figure><img src="" alt="user"></figure><span> Moshin Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
-                    </div>
-                  </div>
-                </div>
+        <div class="container subSections">
+            <div class="row animate-box">
+              <div class="col-lg-4 col-md-4">
+                  <img class="img-responsive" src="img/work_8.jpg" alt="work">
+              </div>
+              <div class="col-lg-4 col-md-4">
+                  <img class="img-responsive" src="img/work_9.jpg" alt="work">
+              </div>
+              <div class="col-lg-4 col-md-4">
+                  <img class="img-responsive" src="img/work_10.jpg" alt="work">
               </div>
             </div>
           </div>
-        </div>
       </div>
       <footer id="fh5co-footer" role="contentinfo">
         <div class="container">
           <div class="row row-pb-md">
-            <div class="col-md-3 fh5co-widget">
-              <h4>MINA</h4>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Learn &amp; Grow</h4>
-              <ul class="fh5co-footer-links">
-                <li><a href="#">Word to Word Classes</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Engage us</h4>
-              <ul class="fh5co-footer-links">
-                <li><a>BBQ</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Legal</h4>
-              <ul class="fh5co-footer-links">
-                <li><a>Legal Service</a></li>
-              </ul>
-            </div>
+              <div class="col-md-3 fh5co-widget">
+                <h4>MINA</h4>
+                <p>Our Vision is to facilitate and empower Muslim community to utilise their full potential by contributing profusely to the Australian society</p>
+              </div>
+              <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
+                <h4>Learn &amp; Grow</h4>
+                <ul class="fh5co-footer-links">
+                  <li>Quran Word to Word Classes</li>
+                  <li>NLP Course</li>
+                  <li>Weekly Dhars (Lessons)</li>
+                </ul>
+              </div>
+              <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
+                <h4>Engage us</h4>
+                <ul class="fh5co-footer-links">
+                  <li>Community BBQ</li>
+                  <li>EID Lunches</li>
+                  <li>Camping</li>
+                  <li>Family Outing</li>
+                </ul>
+              </div>
           </div>
           <div class="row copyright">
             <div class="col-md-12 text-center">
@@ -232,9 +202,7 @@
               <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
               <div>
                 <ul class="fh5co-social-icons">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
