--- a/uat/contact.html
+++ b/uat/contact.html
@@ -38,11 +38,8 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 text-right">
-                <p class="num">Call: 1800 000 0000</p>
                 <ul class="fh5co-social">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -57,8 +54,7 @@
               <div class="col-xs-10 text-right menu-1">
                 <ul>
                   <li><a href="about.html">About Us</a></li>
-                  <li><a href="project.html">Projects</a></li>
-                  <li><a href="event.html">Events</a></li>
+                  <li><a href="project.html">Projects & Events</a></li>
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li class="active"><a href="contact.html">Contact</a></li>
                 </ul>
@@ -67,7 +63,7 @@
           </div>
         </div>
       </nav>
-      <header class="fh5co-cover" id="fh5co-header" role="banner" style="background-image:url(img/img_bg_1.jpg)" data-stellar-background-ratio="0.5">
+      <header class="fh5co-cover" id="fh5co-header" role="banner" style="background-image:url(img/img_bg_4.jpg)" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
@@ -85,18 +81,17 @@
       <div id="fh5co-contact">
         <div class="container">
           <div class="row">
-            <div class="col-md-5 col-md-push-1 animate-box">
+            <div class="col-md-10 col-md-push-1 animate-box">
               <div class="fh5co-contact-info">
                 <h3>Contact Information</h3>
                 <ul>
                   <li class="address">198 West 21th Street, Suite 721 New York NY 10016</li>
-                  <li class="phone">1800 000 0000</li>
                   <li class="email">info@mina.org</li>
                 </ul>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25253.065181047925!2d144.95184875531962!3d-37.70481374905496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad645326f4c077d%3A0x5045675218cd1f0!2sFawkner+VIC+3060!5e0!3m2!1sen!2sau!4v1482698510139" width="350" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25253.065181047925!2d144.95184875531962!3d-37.70481374905496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad645326f4c077d%3A0x5045675218cd1f0!2sFawkner+VIC+3060!5e0!3m2!1sen!2sau!4v1482698510139" width="80%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md-6 animate-box">
+            <!-- <div class="col-md-6 animate-box">
               <h3>Get In Touch</h3>
               <form action="#">
                 <div class="row form-group">
@@ -123,7 +118,7 @@
                   <input class="btn btn-primary" type="submit" value="Send Message">
                 </div>
               </form>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -132,24 +127,23 @@
           <div class="row row-pb-md">
             <div class="col-md-3 fh5co-widget">
               <h4>MINA</h4>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+              <p>Our Vision is to facilitate and empower Muslim community to utilise their full potential by contributing profusely to the Australian society</p>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
+            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
               <h4>Learn &amp; Grow</h4>
               <ul class="fh5co-footer-links">
-                <li><a href="#">Word to Word Classes</a></li>
+                <li>Quran Word to Word Classes</li>
+                <li>NLP Course</li>
+                <li>Weekly Dhars (Lessons)</li>
               </ul>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
+            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
               <h4>Engage us</h4>
               <ul class="fh5co-footer-links">
-                <li><a>BBQ</a></li>
-              </ul>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
-              <h4>Legal</h4>
-              <ul class="fh5co-footer-links">
-                <li><a>Legal Service</a></li>
+                <li>Community BBQ</li>
+                <li>EID Lunches</li>
+                <li>Camping</li>
+                <li>Family Outing</li>
               </ul>
             </div>
           </div>
@@ -159,9 +153,7 @@
               <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
               <div>
                 <ul class="fh5co-social-icons">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
