--- a/uat/index.html
+++ b/uat/index.html
@@ -36,11 +36,11 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 text-right">
-                <p class="num">Call: 1800 000 0000</p>
+                <!-- <p class="num">Call: 1800 000 0000</p> -->
                 <ul class="fh5co-social">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
+                  <!-- <li><a href="#"><i class="icon-twitter"></i></a></li>
+                  <li><a href="#"><i class="icon-linkedin"></i></a></li> -->
                 </ul>
               </div>
             </div>
@@ -55,8 +55,8 @@
               <div class="col-xs-10 text-right menu-1">
                 <ul>
                   <li><a href="about.html">About Us</a></li>
-                  <li><a href="project.html">Projects</a></li>
-                  <li><a href="event.html">Events</a></li>
+                  <li><a href="project.html">Projects & Events</a></li>
+                  <!-- <li><a href="event.html">Events</a></li> -->
                   <li><a href="photo.html">Photo Gallery</a></li>
                   <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -72,8 +72,11 @@
             <div class="col-md-8 col-md-offset-2 text-center">
               <div class="display-t">
                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                  <h1>The Art of Teaching is the Art of Assisting Discovery</h1>
-                  <h2>MINA by<a href="#" target="_blank">&nbsp;MINA</a></h2>
+                  <h1>It is also charity to utter a good word.</h1>
+                  <h2>
+                    By Prophet Muhammad (PBUH)
+                    <!-- <a href="#" target="_blank">&nbsp;MINA</a> -->
+                  </h2>
                 </div>
               </div>
             </div>
@@ -83,9 +86,9 @@
       <div class="fh5co-counters" id="fh5co-counter">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="200" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
-            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="300" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="18" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Projects</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="468" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Events</span></div>
+            <div class="col-md-4 text-center animate-box"><span class="fh5co-counter js-counter" data-from="0" data-to="75" data-speed="5000" data-refresh-interval="50"></span><span class="fh5co-counter-label">Members</span></div>
           </div>
         </div>
       </div>
@@ -96,7 +99,8 @@
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
               <h2>About Us</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>MINA is a not for profit organisation managed by committee of management overseeing the activities and ensure it leads to the vision and objectives outlined.</p>
+              
             </div>
           </div>
         </div>
@@ -107,12 +111,7 @@
               <div class="col-md-4 animate-box">
                 <div class="mt">
                   <div>
-                    <h4>Real Project For Real Solutions</h4>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-                  </div>
-                  <div>
-                    <h4>Real Project For Real Solutions</h4>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                      <p>This association comprises group of like-minded families of Islamic faith from diverse demographic background across Indian subcontinent who come together to bring some amazing events and project to support the Muslim Community in Australia and also engage and works with Australia community to build better tomorrow. </p>
                   </div>
                 </div>
               </div>
@@ -127,7 +126,7 @@
           <div class="row animate-box">
             <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
               <h2>Photo Gallary</h2>
-              <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+              <p>Some of our amazing moments</p>
             </div>
           </div>
         </div>
@@ -135,19 +134,19 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
               <img class="img-responsive" src="img/p1.jpg" alt="">
-                <h3>Eid al-Fitr</h3><span>Biryani Getting ready to be served</span></a>
+                <h3>Eid al-Adha</h3><span>Biryani Getting ready to be served</span></a>
             </div>
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
                 <img class="img-responsive" src="img/p8.jpg" alt="">
-                <h3>Dawah Gathering</h3><span>Quran Recitation</span></a>
+                <h3>Dawah Gathering</h3><span>Kids Quran Recitation</span></a>
             </div>
             <div class="col-md-4 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn"><a>
               <img class="img-responsive" src="img/p4.jpg" alt="">
-                <h3>Eid al-Adha</h3><span>Quran Recitation</span></a>
+                <h3>Multi-faith Eid program</h3><span>Quran Recitation</span></a>
             </div>
           </div>
         </div>
-        <div class="container">
+        <!-- <div class="container">
           <div class="row">
             <div class="features">
               <div class="col-md-4 animate-box">
@@ -164,13 +163,13 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="fh5co-bg-section" id="fh5co-testimonial">
         <div class="container">
           <div class="row animate-box">
             <div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-              <h2>Testimonials</h2>
+              <h2>Quotes and Our philosophy</h2>
             </div>
           </div>
           <div class="row">
@@ -179,35 +178,43 @@
                 <div class="owl-carousel owl-carousel-fullwidth">
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="img/iqbal.png" alt="user"></figure><span> Iqbal Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
+                      <!-- <figure><img src="img/iqbal.png" alt="user"></figure><span> Iqbal Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                      <h3>
+                        <p>&ldquo; There is no beauty better than intellect. &rdquo;</p>
+                      </h3>
                     </div>
                   </div>
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="img/fois.png" alt="user"></figure><span> Fois Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
+                      <!-- <figure><img src="img/fois.png" alt="user"></figure><span> Fois Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                      <h3>
+                        <p>&ldquo; Do not belittle any good deed, even meeting your brother with a cheerful face &rdquo;</p>
+                      </h3>
                     </div>
                   </div>
                   <div class="item">
                     <div class="testimony-slide active text-center">
-                      <figure><img src="img/mujib.png" alt="user"></figure><span> Mujab Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span>
-                      <blockquote>
-                        <p>&ldquo;&rdquo;</p>
-                      </blockquote>
+                      <!-- <figure><img src="img/mujib.png" alt="user"></figure><span> Mujab Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                      <h3>
+                        <p>&ldquo; Anyone who trains himself to be patient, Allah will give him the strength to be patient. &rdquo;</p>
+                      </h3>
                     </div>
                   </div>
+                  <div class="item">
+                      <div class="testimony-slide active text-center">
+                        <!-- <figure><img src="img/mujib.png" alt="user"></figure><span> Mujab Bhai, via &nbsp;<a class="facebook" href="">facebook</a></span> -->
+                        <h3>
+                          <p>&ldquo; Kindness is a mark of faith. &rdquo;</p>
+                        </h3>
+                      </div>
+                    </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg)">
+      <!-- <div id="fh5co-started" style="background-image:url(images/img_bg_2.jpg)">
         <div class="overlay"></div>
         <div class="container">
           <div class="row animate-box">
@@ -220,32 +227,37 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <footer id="fh5co-footer" role="contentinfo">
         <div class="container">
           <div class="row row-pb-md">
             <div class="col-md-3 fh5co-widget">
               <h4>MINA</h4>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+              <p>Our Vision is to facilitate and empower Muslim community to utilise their full potential by contributing profusely to the Australian society</p>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
+            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
               <h4>Learn &amp; Grow</h4>
               <ul class="fh5co-footer-links">
-                <li><a href="#">Word to Word Classes</a></li>
+                <li>Quran Word to Word Classes</li>
+                <li>NLP Course</li>
+                <li>Weekly Dhars (Lessons)</li>
               </ul>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
+            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-4">
               <h4>Engage us</h4>
               <ul class="fh5co-footer-links">
-                <li><a>BBQ</a></li>
+                <li>Community BBQ</li>
+                <li>EID Lunches</li>
+                <li>Camping</li>
+                <li>Family Outing</li>
               </ul>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
+            <!-- <div class="col-md-2 col-sm-4 col-xs-6 col-md-push-2">
               <h4>Legal</h4>
               <ul class="fh5co-footer-links">
                 <li><a>Legal Service</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
           <div class="row copyright">
             <div class="col-md-12 text-center">
@@ -253,9 +265,7 @@
               <p class="block">Designed by<a href="http://fareezahmed.com/" target="_blank">&nbspFareez Ahmed</a></p>
               <div>
                 <ul class="fh5co-social-icons">
-                  <li><a href="#"><i class="icon-facebook"></i></a></li>
-                  <li><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                  <li><a href="https://www.facebook.com/minamelb"><i class="icon-facebook"></i></a></li>
                 </ul>
               </div>
             </div>
